# attestara

./: .dependency-cruiser.cjs  .env.example  .gitignore  .jscpd.json  .semgrep.yml  01-zk-circuit-poc.md  02-latency-cost-analysis.md  03-threat-model.md  04-reference-architecture.md  05-legal-enforceability.md  06-ip-licensing.md  07-gtm-strategy-v2.md  07-gtm-strategy.md  08-financial-model-v2.md  08-financial-model.md  09-investor-one-pager.md  10-standards-strategy.md  11-dx-specification.md  12-advisory-board-plan.md  13-dao-legal-wrapper-v2.md  13-dao-legal-wrapper.md  AGENTS.md  AgentClear_Whitepaper.md  AgentClear_Whitepaper_v4.md  Attestara_Whitepaper_v3.md  Attestara_Whitepaper_v5.md  CLAUDE.md  CONTRIBUTING.md  SECURITY.md  agentclear-competitive-analysis.md  attestara-competitive-analysis.md  eslint.config.js  generate_competitive_analysis_pdf.py  generate_scope_pdf.py  generate_whitepaper_v5_pdf.py  littledata-blog-agentic-ai-governance.md  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  (+2 more)
.github/workflows/: ci.yml  security.yml
docs/: ARCHITECTURE.md  ATTESTARA-PROJECT-REVIEW-2026-04-12.md  ATTESTARA-PROJECT-REVIEW-2026-04-29.md  AUDIT-PREP.md  DEPLOYMENT.md  submission-orgs.txt
docs/_archive/: ## Context bhapi-ai-portal — Pre-Ph.txt  ATTESTARA-CONTINUATION-PROMPT.md  Confirm the anchoring service speci.txt  Data quality ingestion improvement.txt  Device agent + push notifications.md  Untitled.txt  attestara-next.txt  attestara-tan-project-scope-v0.1.md  littledata-running-notes.txt  projects.txt  user-stories.txt  {.txt
docs/brand/: brand-guidelines.md  domain-trademark-checklist.md
docs/demo/: DEEP-DIVE-15MIN.md  QUICKSTART-5MIN.md
docs/legal/: counsel-engagement-plan.md  legal-questions-matrix.md
docs/standards/: attestara-context-v1.jsonld  dif-engagement-checklist.md  dif-presentation-outline.md  w3c-ccg-work-item-draft.md
examples/crewai-procurement-agent/: .env.example  README.md  agent.py  pyproject.toml
infrastructure/: Dockerfile.prover  Dockerfile.relay  docker-compose.test.yml  docker-compose.yml  render.yaml
plugins/attestara-core-py/: .gitignore  README.md  pyproject.toml
plugins/attestara-core-py/attestara_core/: __init__.py
plugins/attestara-core-py/tests/: test_smoke.py
scripts/: build-api-docs.ts  generate-api-client.ts  setup.sh
tests/: naming-regression.test.ts
tests/deployment/: startup.test.ts
tests/e2e/: admin-operations.test.ts  analytics-dashboard.test.ts  api-key-lifecycle.test.ts  credential-lifecycle.test.ts  cross-org-security.test.ts  full-negotiation.test.ts  (+2 more)
(+21 files in other folders)
