[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attestara"
version = "0.1.0"
description = "Python client for the Attestara cryptographic trust protocol"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Attestara contributors" }]
keywords = ["attestara", "ai-agents", "trust", "verifiable-credentials", "zk", "did"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.6,<3",
    "tenacity>=8.2,<10",
    "eth-account>=0.13,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "mypy>=1.8",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://attestara.ai"
Repository = "https://github.com/mick-e/attestara"
Documentation = "https://github.com/mick-e/attestara#readme"
Issues = "https://github.com/mick-e/attestara/issues"

[tool.hatch.build.targets.wheel]
packages = ["attestara_core"]

[tool.hatch.build.targets.sdist]
include = ["/attestara_core", "/tests", "/README.md", "/pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring a live relay (skipped unless ATTESTARA_INTEGRATION=1)",
]
